force-app/main/default/objects/Conference__c/Conference__c.object-meta.xml
<CustomObject>
    <description>FSL Conferences</description>
    <label>FSL Conference</label>
    <nameField>
        <displayFormat>CON-{0000}</displayFormat>
        <label>Conference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSL Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>