force-app/main/default/objects/Conference__c/fields/AL_Increase__c.field-meta.xml
<CustomField>
    <fullName>AL_Increase__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AL Increase</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>