force-app/main/default/objects/Conference__c/fields/AL_Language__c.field-meta.xml
<CustomField>
    <fullName>AL_Language__c</fullName>
    <label>AL Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Languages</valueSetName>
    </valueSet>
</CustomField>