force-app/main/default/objects/Conference__c/fields/BAML_Call__c.field-meta.xml
<CustomField>
    <fullName>BAML_Call__c</fullName>
    <formula>Company__r.External_ID__c = &quot;916016&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAML Call</label>
    <type>Checkbox</type>
</CustomField>