force-app/main/default/objects/Conference__c/fields/Bridges_Lead__c.field-meta.xml
<CustomField>
    <fullName>Bridges_Lead__c</fullName>
    <formula>Lead_Bridge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bridges - Lead</label>
    <type>Text</type>
</CustomField>