force-app/main/default/objects/Conference__c/fields/Click_to_Join__c.field-meta.xml
<CustomField>
    <fullName>Click_to_Join__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Click to Join</label>
    <type>Checkbox</type>
</CustomField>