force-app/main/default/objects/Conference__c/fields/Company_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Company_External_ID__c</fullName>
    <formula>Company__r.External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company External ID</label>
    <type>Text</type>
</CustomField>