force-app/main/default/objects/Conference__c/fields/Company_Priority__c.field-meta.xml
<CustomField>
    <fullName>Company_Priority__c</fullName>
    <formula>Company__r.Company_Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>