force-app/main/default/objects/Conference__c/fields/Conf_End__c.field-meta.xml
<CustomField>
    <fullName>Conf_End__c</fullName>
    <formula>Call_End__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conf End</label>
    <type>DateTime</type>
</CustomField>