force-app/main/default/objects/Conference__c/fields/Conf_Id__c.field-meta.xml
<CustomField>
    <fullName>Conf_Id__c</fullName>
    <description>Read only Conference Id</description>
    <formula>Conference_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conf Id</label>
    <type>Text</type>
</CustomField>