force-app/main/default/objects/Conference__c/fields/Conf_Start__c.field-meta.xml
<CustomField>
    <fullName>Conf_Start__c</fullName>
    <formula>Call_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conf Start</label>
    <type>DateTime</type>
</CustomField>