force-app/main/default/objects/Conference__c/fields/Conference_ID__c.field-meta.xml
<CustomField>
    <fullName>Conference_ID__c</fullName>
    <externalId>true</externalId>
    <label>Conference ID</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>