force-app/main/default/objects/Conference__c/fields/Cross_City_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Cross_City_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if skilled roles on the same call can be run from different centers.</inlineHelpText>
    <label>Cross City Eligible</label>
    <type>Checkbox</type>
</CustomField>