force-app/main/default/objects/Conference__c/fields/Dial_Out_Bridges__c.field-meta.xml
<CustomField>
    <fullName>Dial_Out_Bridges__c</fullName>
    <formula>IGLOO_DialOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dial Out Bridges</label>
    <type>Text</type>
</CustomField>