force-app/main/default/objects/Conference__c/fields/Dial_Out_Ports__c.field-meta.xml
<CustomField>
    <fullName>Dial_Out_Ports__c</fullName>
    <label>Dial-Out Ports</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>