force-app/main/default/objects/Conference__c/fields/Early_AL_Required__c.field-meta.xml
<CustomField>
    <fullName>Early_AL_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early AL Required</label>
    <type>Checkbox</type>
</CustomField>