force-app/main/default/objects/Conference__c/fields/EP_Basic__c.field-meta.xml
<CustomField>
    <fullName>EP_Basic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EP Basic</label>
    <type>Checkbox</type>
</CustomField>