force-app/main/default/objects/Conference__c/fields/Exclude_From_Reports__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Reports__c</fullName>
    <formula>Company__r.Exclude_From_Reports__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exclude From Reports</label>
    <type>Checkbox</type>
</CustomField>