force-app/main/default/objects/Conference__c/fields/Force_AL_Bridge__c.field-meta.xml
<CustomField>
    <fullName>Force_AL_Bridge__c</fullName>
    <label>Force AL Bridge</label>
    <length>5</length>
    <type>Text</type>
</CustomField>