force-app/main/default/objects/Conference__c/fields/Force_AL_Visible_for_WFH__c.field-meta.xml
<CustomField>
    <fullName>Force_AL_Visible_for_WFH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force AL Visible for WFH</label>
    <type>Checkbox</type>
</CustomField>