force-app/main/default/objects/Conference__c/fields/FT_NOE_Bridges__c.field-meta.xml
<CustomField>
    <fullName>FT_NOE_Bridges__c</fullName>
    <formula>IGLOO_FTNOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FT NOE Bridges</label>
    <type>Text</type>
</CustomField>