force-app/main/default/objects/Conference__c/fields/IGLOO_AL_Translation__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_AL_Translation__c</fullName>
    <label>IGLOO AL Translation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>