force-app/main/default/objects/Conference__c/fields/IGLOO_AnswerLine__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_AnswerLine__c</fullName>
    <label>IGLOO AnswerLine</label>
    <length>250</length>
    <type>Text</type>
</CustomField>