force-app/main/default/objects/Conference__c/fields/IGLOO_DialOut__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_DialOut__c</fullName>
    <label>IGLOO DialOut</label>
    <length>250</length>
    <type>Text</type>
</CustomField>