force-app/main/default/objects/Conference__c/fields/IGLOO_FTNOE__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_FTNOE__c</fullName>
    <label>IGLOO FTNOE</label>
    <length>250</length>
    <type>Text</type>
</CustomField>