force-app/main/default/objects/Conference__c/fields/IGLOO_Location__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_Location__c</fullName>
    <label>IGLOO Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Locations</valueSetName>
    </valueSet>
</CustomField>