force-app/main/default/objects/Conference__c/fields/IGLOO_Radio_Tour__c.field-meta.xml
<CustomField>
    <fullName>IGLOO_Radio_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IGLOO Radio Tour</label>
    <type>Checkbox</type>
</CustomField>