force-app/main/default/objects/Conference__c/fields/India_Eligible_Skills__c.field-meta.xml
<CustomField>
    <fullName>India_Eligible_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>India Eligible Skills</label>
    <type>Checkbox</type>
</CustomField>