force-app/main/default/objects/Conference__c/fields/Lead_Bridge__c.field-meta.xml
<CustomField>
    <fullName>Lead_Bridge__c</fullName>
    <label>Lead Bridge</label>
    <length>250</length>
    <type>Text</type>
</CustomField>