force-app/main/default/objects/Conference__c/fields/Linked_Bridges__c.field-meta.xml
<CustomField>
    <fullName>Linked_Bridges__c</fullName>
    <label>Linked Bridges</label>
    <length>250</length>
    <type>Text</type>
</CustomField>