force-app/main/default/objects/Conference__c/fields/Linked_Conference__c.field-meta.xml
<CustomField>
    <fullName>Linked_Conference__c</fullName>
    <label>Linked Conference</label>
    <type>TextArea</type>
</CustomField>