force-app/main/default/objects/Conference__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maker</label>
    <type>Checkbox</type>
</CustomField>