force-app/main/default/objects/Conference__c/fields/Maker_First_Run__c.field-meta.xml
<CustomField>
    <fullName>Maker_First_Run__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maker First Run</label>
    <type>Checkbox</type>
</CustomField>