force-app/main/default/objects/Conference__c/fields/Maker_Not_Made__c.field-meta.xml
<CustomField>
    <fullName>Maker_Not_Made__c</fullName>
    <formula>Maker_Window__c
&amp;&amp;
!Maker_First_Run__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maker Not Made</label>
    <type>Checkbox</type>
</CustomField>