force-app/main/default/objects/Conference__c/fields/Maker_Roles_to_Make__c.field-meta.xml
<CustomField>
    <fullName>Maker_Roles_to_Make__c</fullName>
    <formula>!ISBLANK(IGLOO_AnswerLine__c)
||
!ISBLANK(IGLOO_DialOut__c)
||
!ISBLANK(IGLOO_FTNOE__c)
||
!ISBLANK(IGLOO_NOE__c)
||
VALUE(TEXT(Extra_AL_Roles__c)) &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maker Roles to Make</label>
    <type>Checkbox</type>
</CustomField>