force-app/main/default/objects/Conference__c/fields/MKR_Running__c.field-meta.xml
<CustomField>
    <fullName>MKR_Running__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MKR Running</label>
    <type>Checkbox</type>
</CustomField>