force-app/main/default/objects/Conference__c/fields/Mock_Call__c.field-meta.xml
<CustomField>
    <fullName>Mock_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mock Call</label>
    <type>Checkbox</type>
</CustomField>