force-app/main/default/objects/Conference__c/fields/Mod_Code__c.field-meta.xml
<CustomField>
    <fullName>Mod_Code__c</fullName>
    <label>Mod Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>