force-app/main/default/objects/Conference__c/fields/ModChange__c.field-meta.xml
<CustomField>
    <fullName>ModChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ModChange</label>
    <type>Checkbox</type>
</CustomField>