force-app/main/default/objects/Conference__c/fields/Modify__c.field-meta.xml
<CustomField>
    <fullName>Modify__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modify</label>
    <type>Checkbox</type>
</CustomField>