force-app/main/default/objects/Conference__c/fields/No_Labor__c.field-meta.xml
<CustomField>
    <fullName>No_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Labor</label>
    <type>Checkbox</type>
</CustomField>