force-app/main/default/objects/Conference__c/fields/NOE_Bridges__c.field-meta.xml
<CustomField>
    <fullName>NOE_Bridges__c</fullName>
    <formula>IGLOO_NOE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NOE Bridges</label>
    <type>Text</type>
</CustomField>