force-app/main/default/objects/Conference__c/fields/NOE_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>NOE_Start_Time__c</fullName>
    <defaultValue>&quot;Standard&quot;</defaultValue>
    <label>NOE Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Call Start</fullName>
            </value>
            <value>
                <fullName>15 Prior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>