force-app/main/default/objects/Conference__c/fields/Not_New__c.field-meta.xml
<CustomField>
    <fullName>Not_New__c</fullName>
    <formula>NOW() &gt; CreatedDate  + (2/1440)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not New</label>
    <type>Checkbox</type>
</CustomField>