force-app/main/default/objects/Conference__c/fields/Override_Account_Settings__c.field-meta.xml
<CustomField>
    <fullName>Override_Account_Settings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Account Settings</label>
    <type>Checkbox</type>
</CustomField>