force-app/main/default/objects/Conference__c/fields/Playback__c.field-meta.xml
<CustomField>
    <fullName>Playback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Playback</label>
    <type>Checkbox</type>
</CustomField>