force-app/main/default/objects/Conference__c/fields/Pre_Conference__c.field-meta.xml
<CustomField>
    <fullName>Pre_Conference__c</fullName>
    <label>Pre-Conference</label>
    <type>DateTime</type>
</CustomField>