force-app/main/default/objects/Conference__c/fields/Pre_Record__c.field-meta.xml
<CustomField>
    <fullName>Pre_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Record</label>
    <type>Checkbox</type>
</CustomField>