force-app/main/default/objects/Conference__c/fields/Ready_To_Archive__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Archive__c</fullName>
    <formula>NOW() &gt; Call_End__c + 61
|| 
(
    Call_Start__c &gt; NOW() + 16 
    &amp;&amp; 
    TEXT(Status__c) = &quot;Canceled&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready To Archive</label>
    <type>Checkbox</type>
</CustomField>