force-app/main/default/objects/Conference__c/fields/Reset_Skills__c.field-meta.xml
<CustomField>
    <fullName>Reset_Skills__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Skills</label>
    <type>Checkbox</type>
</CustomField>