force-app/main/default/objects/Conference__c/fields/RunFlow_Started__c.field-meta.xml
<CustomField>
    <fullName>RunFlow_Started__c</fullName>
    <label>RunFlow Started</label>
    <type>DateTime</type>
</CustomField>