force-app/main/default/objects/Conference__c/fields/Skilled_Language__c.field-meta.xml
<CustomField>
    <fullName>Skilled_Language__c</fullName>
    <label>Skilled Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FSL_Languages</valueSetName>
    </valueSet>
</CustomField>