force-app/main/default/objects/Conference__c/fields/Sort_Key__c.field-meta.xml
<CustomField>
    <fullName>Sort_Key__c</fullName>
    <formula>IF(
    NOW()-(1/24) &lt; Call_End__c
,
    Call_Start__c - NOW()
,
    1000 + (Call_Start__c - NOW())
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sort Key</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>