force-app/main/default/objects/Conference__c/fields/Speakers__c.field-meta.xml
<CustomField>
    <fullName>Speakers__c</fullName>
    <label>Speakers</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>