force-app/main/default/objects/Conference__c/fields/Time_Based_Reset__c.field-meta.xml
<CustomField>
    <fullName>Time_Based_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Based Reset</label>
    <type>Checkbox</type>
</CustomField>