force-app/main/default/objects/Conference__c/fields/Time_Shift_ST__c.field-meta.xml
<CustomField>
    <fullName>Time_Shift_ST__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Time Shift ST</label>
    <type>Checkbox</type>
</CustomField>