force-app/main/default/objects/Conference__c/fields/VIP_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>VIP_Mismatch__c</fullName>
    <formula>VIP_Company__c != VIP_Required__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VIP Mismatch</label>
    <type>Checkbox</type>
</CustomField>