force-app/main/default/objects/Conference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Call_Start__c</columns>
    <columns>Call_End__c</columns>
    <columns>Company__c</columns>
    <columns>Call_Type__c</columns>
    <columns>RecordID18__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>